# vldc-bot

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pylintrc  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  WARRANT_CANARY.md  docker-compose-dev.yml  docker-compose.yml  example.env  migrate_to_sqlite.py  mypy.ini  pirozhki.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  smilebot.py  words.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  lint_and_test.yml  nayn_bot.yml  nayn_bot_dev.yml  pr.yml  pythonapp.yml
bot/: bot.py  config.py  decorators.py  filters.py  generate_gpg_key.py  handlers.py  main.py  mode.py  permissions.py  tg_filters.py  typing_utils.py  utils.py
bot/db/: mongo.py  sqlite.py
bot/skills/: __init__.py  aoc_mode.py  askci.py  at_least_70k.py  ban.py  banme.py  buktopuha.py  canary.py  chat.py  chirp.py  coc.py  core.py  covid.py  covid_mode.py  fools.py  kozula.py  length.py  mute.py  nastya_mode.py  nya.py  pr.py  prism.py  roll.py  since_mode.py  smile_mode.py  still.py  towel_like_mode.py  towel_mode.py  towel_mode_2.py  tree.py  trusted_mode.py  uwu.py  version.py  words.py
bot/tests/: chirp_test.py  get_conf_from_env_test.py  sqlite_test.py  towel_mode_test.py  utils_test.py
bot/utils/: audio_recognition.py  cache.py  recognition.py  time.py  voice_recognition.py
compose/dev/: Dockerfile
compose/prod/: Dockerfile
