[tool.poetry]
name = "vldc-bot"
version = "0.5.4"
description = "VLDC nyan bot ^_^"
authors = [
    #tg
    "@egregors",
    "@cpro29a",
    "@lamak",
    "@getjump",
    "@zemlya25",
    "@moonbaseDelta",
    "@Grawl",
    "@aggyomfg",
    "@alex_sutulov",
]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13"
pymongo = "^3.11"
grpcio = "==1.33.2"
google-cloud-translate = "2.0.0"
google-cloud-automl = "0.10.0"
google-cloud-speech = "2.0.0"
sentry-sdk = "^0.19"
Pillow = "^8.0"
toml = "^0.10"

[tool.poetry.dev-dependencies]
flake8 = "^3"
pytest = "^6"
mypy = "0.790"
ptvsd = "4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }
